--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=http://geomop.github.io/GeoMop/" />
+<meta http-equiv="refresh" content="0; url=GeoMop" />
