--- a/GeoMop/genindexCommon.html
+++ b/GeoMop/genindexCommon.html
@@ -284,13 +284,17 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="aut/common/geometry_files.html#geometry_files.geometry_structures.SurfaceApproximation.b_spline">b_spline (geometry_files.geometry_structures.SurfaceApproximation attribute)</a>
+
+      <ul>
+        <li><a href="aut/common/b_spline.html#module-b_spline">(module)</a>
 </li>
+      </ul></li>
       <li><a href="aut/common/geometry_files.html#geometry_files.geometry_structures.StratumLayer.bottom">bottom (geometry_files.geometry_structures.StratumLayer attribute)</a>
-</li>
-      <li><a href="aut/common/geometry_files.html#geometry_files.geometry_structures.Region.boundary">boundary (geometry_files.geometry_structures.Region attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="aut/common/geometry_files.html#geometry_files.geometry_structures.Region.boundary">boundary (geometry_files.geometry_structures.Region attribute)</a>
+</li>
       <li><a href="aut/common/geometry_files.html#geometry_files.geometry_structures.Region.brep_shape_ids">brep_shape_ids (geometry_files.geometry_structures.Region attribute)</a>
 </li>
       <li><a href="aut/common/version.html#version.Version.build">build (version.Version attribute)</a>
@@ -334,8 +338,6 @@
       <li><a href="aut/common/model_data.html#model_data.data_node.DataNode.children_keys">children_keys (model_data.data_node.DataNode attribute)</a>
 </li>
       <li><a href="aut/common/json_data.html#json_data.ClassFactory">ClassFactory (class in json_data)</a>
-</li>
-      <li><a href="aut/common/json_data.html#json_data.ClassFromList">ClassFromList (class in json_data)</a>
 </li>
       <li><a href="aut/common/model_data.notifications.html#model_data.notifications.handler.NotificationHandler.clear">clear() (model_data.notifications.handler.NotificationHandler method)</a>
 </li>
@@ -709,6 +711,8 @@
 </li>
       <li><a href="aut/common/model_data.notifications.html#model_data.notifications.notification.Notification.Severity.info">info (model_data.notifications.notification.Notification.Severity attribute)</a>
 </li>
+      <li><a href="aut/common/geometry_files.html#geometry_files.geometry_structures.UserSupplement.init_area">init_area (geometry_files.geometry_structures.UserSupplement attribute)</a>
+</li>
       <li><a href="aut/common/pyperclip.html#pyperclip.clipboards.init_no_clipboard">init_no_clipboard() (in module pyperclip.clipboards)</a>
 </li>
       <li><a href="aut/common/pyperclip.html#pyperclip.windows.init_windows_clipboard">init_windows_clipboard() (in module pyperclip.windows)</a>
@@ -828,11 +832,7 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="aut/common/json_data.html#json_data.ClassFactory.make_instance">make_instance() (json_data.ClassFactory method)</a>
-
-      <ul>
-        <li><a href="aut/common/json_data.html#json_data.ClassFromList.make_instance">(json_data.ClassFromList method)</a>
 </li>
-      </ul></li>
       <li><a href="aut/common/geomop_analysis.html#geomop_analysis.analysis.Analysis.make_relative_path">make_relative_path() (geomop_analysis.analysis.Analysis method)</a>
 </li>
       <li><a href="aut/common/geometry_files.html#geometry_files.geometry_structures.Surface.make_surface">make_surface() (geometry_files.geometry_structures.Surface static method)</a>
@@ -853,10 +853,10 @@
 </li>
       <li><a href="aut/common/model_data.html#module-model_data.export_con">model_data.export_con (module)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="aut/common/model_data.html#module-model_data.format">model_data.format (module)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="aut/common/model_data.html#module-model_data.import_json">model_data.import_json (module)</a>
 </li>
       <li><a href="aut/common/model_data.notifications.html#module-model_data.notifications">model_data.notifications (module)</a>
