--- a/GeoMop/genindexLE.html
+++ b/GeoMop/genindexLE.html
@@ -176,7 +176,6 @@
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
  | <a href="#O"><strong>O</strong></a>
- | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  
@@ -214,8 +213,6 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aut/LayerEditor/leconfig.html#leconfig.leconfig.LEConfig.data">data (leconfig.leconfig.LEConfig attribute)</a>
-</li>
       <li><a href="aut/LayerEditor/leconfig.html#leconfig.leconfig.LEConfig.diagram">diagram (leconfig.leconfig.LEConfig attribute)</a>
 </li>
   </ul></td>
@@ -232,11 +229,13 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="aut/LayerEditor/leconfig.html#leconfig.leconfig.LEConfig.get_curr_diagram">get_curr_diagram() (leconfig.leconfig.LEConfig class method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="aut/LayerEditor/leconfig.html#leconfig.leconfig.LEConfig.get_current_view">get_current_view() (leconfig.leconfig.LEConfig static method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="aut/LayerEditor/leconfig.html#leconfig.leconfig.LEConfig.get_shapes_from_region">get_shapes_from_region() (leconfig.leconfig.LEConfig class method)</a>
+</li>
+      <li><a href="aut/LayerEditor/leconfig.html#leconfig.leconfig.LEConfig.get_shortcut">get_shortcut() (leconfig.leconfig.LEConfig class method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -267,6 +266,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="aut/LayerEditor/leconfig.html#leconfig.leconfig.LEConfig.layers">layers (leconfig.leconfig.LEConfig attribute)</a>
+</li>
+      <li><a href="aut/LayerEditor/leconfig.html#leconfig.leconfig.LEConfig.le_serializer">le_serializer (leconfig.leconfig.LEConfig attribute)</a>
 </li>
       <li><a href="aut/LayerEditor/leconfig.html#leconfig.leconfig.LEConfig">LEConfig (class in leconfig.leconfig)</a>
 </li>
@@ -311,14 +312,6 @@
       <li><a href="aut/LayerEditor/leconfig.html#leconfig.leconfig.LEConfig.open_recent_file">open_recent_file() (leconfig.leconfig.LEConfig class method)</a>
 </li>
       <li><a href="aut/LayerEditor/leconfig.html#leconfig.leconfig.LEConfig.open_shape_file">open_shape_file() (leconfig.leconfig.LEConfig class method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="P">P</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aut/LayerEditor/leconfig.html#leconfig.leconfig.LEConfig.path">path (leconfig.leconfig.LEConfig attribute)</a>
 </li>
   </ul></td>
 </tr></table>
