--- a/GeoMop/genindexME.html
+++ b/GeoMop/genindexME.html
@@ -189,7 +189,6 @@
  | <a href="#N"><strong>N</strong></a>
  | <a href="#O"><strong>O</strong></a>
  | <a href="#P"><strong>P</strong></a>
- | <a href="#Q"><strong>Q</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
@@ -368,7 +367,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="aut/ModelEditor/meconfig.html#meconfig.meconfig.MEConfig.DEFAULT_IMPORT_FORMAT_FILE">DEFAULT_IMPORT_FORMAT_FILE (meconfig.meconfig.MEConfig attribute)</a>
 </li>
-      <li><a href="aut/ModelEditor/helpers.html#helpers.keyboard_shortcuts.DEFAULT_USER_SHORTCUTS">DEFAULT_USER_SHORTCUTS (in module helpers.keyboard_shortcuts)</a>
+      <li><a href="aut/ModelEditor/helpers.html#helpers.keyboard_shortcuts_definition.DEFAULT_USER_SHORTCUTS">DEFAULT_USER_SHORTCUTS (in module helpers.keyboard_shortcuts_definition)</a>
 </li>
       <li><a href="aut/ModelEditor/ui.panels.html#ui.panels.yaml_editor.YamlEditorWidget.delete">delete() (ui.panels.yaml_editor.YamlEditorWidget method)</a>
 </li>
@@ -496,10 +495,10 @@
 </li>
       <li><a href="aut/ModelEditor/helpers.subyaml.html#helpers.subyaml.structure_changer.StructureChanger.get_indentation">get_indentation() (helpers.subyaml.structure_changer.StructureChanger static method)</a>
 </li>
-      <li><a href="aut/ModelEditor/ist.html#ist.info_text_generator.InfoTextGenerator.get_info_text">get_info_text() (ist.info_text_generator.InfoTextGenerator class method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="aut/ModelEditor/ist.html#ist.info_text_generator.InfoTextGenerator.get_info_text">get_info_text() (ist.info_text_generator.InfoTextGenerator class method)</a>
+</li>
       <li><a href="aut/ModelEditor/helpers.subyaml.html#helpers.subyaml.line_analyzer.LineAnalyzer.get_key_area_end">get_key_area_end() (helpers.subyaml.line_analyzer.LineAnalyzer class method)</a>
 </li>
       <li><a href="aut/ModelEditor/helpers.subyaml.html#helpers.subyaml.change_analyzer.ChangeAnalyzer.get_key_pos_type">get_key_pos_type() (helpers.subyaml.change_analyzer.ChangeAnalyzer method)</a>
@@ -522,14 +521,8 @@
 </li>
       <li><a href="aut/ModelEditor/helpers.subyaml.html#helpers.subyaml.line_analyzer.LineAnalyzer.get_separator">get_separator() (helpers.subyaml.line_analyzer.LineAnalyzer class method)</a>
 </li>
-      <li><a href="aut/ModelEditor/helpers.html#helpers.keyboard_shortcuts.KeyboardShortcut.get_shortcut">get_shortcut() (helpers.keyboard_shortcuts.KeyboardShortcut static method)</a>
-
-      <ul>
-        <li><a href="aut/ModelEditor/helpers.html#helpers.keyboard_shortcuts.get_shortcut">(in module helpers.keyboard_shortcuts)</a>
+      <li><a href="aut/ModelEditor/meconfig.html#meconfig.meconfig.MEConfig.get_shortcut">get_shortcut() (meconfig.meconfig.MEConfig class method)</a>
 </li>
-        <li><a href="aut/ModelEditor/meconfig.html#meconfig.meconfig.MEConfig.get_shortcut">(meconfig.meconfig.MEConfig class method)</a>
-</li>
-      </ul></li>
       <li><a href="aut/ModelEditor/ui.dialogs.html#ui.dialogs.settings_dialog.KeyboardShortcutsTab.get_shortcuts">get_shortcuts() (ui.dialogs.settings_dialog.KeyboardShortcutsTab method)</a>
 </li>
       <li><a href="aut/ModelEditor/helpers.subyaml.html#helpers.subyaml.node_analyzer.NodeAnalyzer.get_start_inner_json_tag">get_start_inner_json_tag() (helpers.subyaml.node_analyzer.NodeAnalyzer method)</a>
@@ -568,7 +561,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="aut/ModelEditor/helpers.html#module-helpers.autocomplete_helper">helpers.autocomplete_helper (module)</a>
 </li>
-      <li><a href="aut/ModelEditor/helpers.html#module-helpers.keyboard_shortcuts">helpers.keyboard_shortcuts (module)</a>
+      <li><a href="aut/ModelEditor/helpers.html#module-helpers.keyboard_shortcuts_definition">helpers.keyboard_shortcuts_definition (module)</a>
 </li>
       <li><a href="aut/ModelEditor/helpers.subyaml.html#module-helpers.subyaml">helpers.subyaml (module)</a>
 </li>
@@ -736,12 +729,10 @@
 </li>
       <li><a href="aut/ModelEditor/ui.components.html#ui.components.keyboard_shortcut_picker.KeyboardShortcutPicker.KEY_TRANSLATIONS">KEY_TRANSLATIONS (ui.components.keyboard_shortcut_picker.KeyboardShortcutPicker attribute)</a>
 </li>
-      <li><a href="aut/ModelEditor/helpers.html#helpers.keyboard_shortcuts.KeyboardShortcut">KeyboardShortcut (class in helpers.keyboard_shortcuts)</a>
+      <li><a href="aut/ModelEditor/ui.components.html#ui.components.keyboard_shortcut_picker.KeyboardShortcutPicker">KeyboardShortcutPicker (class in ui.components.keyboard_shortcut_picker)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aut/ModelEditor/ui.components.html#ui.components.keyboard_shortcut_picker.KeyboardShortcutPicker">KeyboardShortcutPicker (class in ui.components.keyboard_shortcut_picker)</a>
-</li>
       <li><a href="aut/ModelEditor/ui.dialogs.html#ui.dialogs.settings_dialog.KeyboardShortcutsTab">KeyboardShortcutsTab (class in ui.dialogs.settings_dialog)</a>
 </li>
       <li><a href="aut/ModelEditor/ui.components.html#ui.components.keyboard_shortcut_picker.KeyboardShortcutPicker.keyPressEvent">keyPressEvent() (ui.components.keyboard_shortcut_picker.KeyboardShortcutPicker method)</a>
@@ -817,8 +808,6 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="aut/ModelEditor/ist.formatters.html#ist.formatters.markdown2html.markdown2html">markdown2html (class in ist.formatters.markdown2html)</a>
-</li>
-      <li><a href="aut/ModelEditor/helpers.html#helpers.keyboard_shortcuts.KeyboardShortcut.matches_key_event">matches_key_event() (helpers.keyboard_shortcuts.KeyboardShortcut method)</a>
 </li>
       <li><a href="aut/ModelEditor/ist.formatters.extensions.html#ist.formatters.extensions.md_latex.MdLatex">MdLatex (class in ist.formatters.extensions.md_latex)</a>
 </li>
@@ -987,14 +976,6 @@
   </ul></td>
 </tr></table>
 
-<h2 id="Q">Q</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="aut/ModelEditor/helpers.html#helpers.keyboard_shortcuts.KeyboardShortcut.qt_modifiers">qt_modifiers (helpers.keyboard_shortcuts.KeyboardShortcut attribute)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -1104,7 +1085,7 @@
       </ul></li>
       <li><a href="aut/ModelEditor/model_editor.html#model_editor.ModelEditor.save_old_file">save_old_file() (model_editor.ModelEditor method)</a>
 </li>
-      <li><a href="aut/ModelEditor/helpers.html#helpers.keyboard_shortcuts.SCINTILLA_DISABLE">SCINTILLA_DISABLE (in module helpers.keyboard_shortcuts)</a>
+      <li><a href="aut/ModelEditor/helpers.html#helpers.keyboard_shortcuts_definition.SCINTILLA_DISABLE">SCINTILLA_DISABLE (in module helpers.keyboard_shortcuts_definition)</a>
 </li>
       <li><a href="aut/ModelEditor/helpers.html#helpers.autocomplete_helper.AutocompleteHelper.scintilla_options">scintilla_options (helpers.autocomplete_helper.AutocompleteHelper attribute)</a>
 </li>
@@ -1144,7 +1125,7 @@
 </li>
       <li><a href="aut/ModelEditor/ui.components.html#ui.components.keyboard_shortcut_picker.KeyboardShortcutPicker.shortcut">shortcut (ui.components.keyboard_shortcut_picker.KeyboardShortcutPicker attribute)</a>
 </li>
-      <li><a href="aut/ModelEditor/helpers.html#helpers.keyboard_shortcuts.SHORTCUT_LABELS">SHORTCUT_LABELS (in module helpers.keyboard_shortcuts)</a>
+      <li><a href="aut/ModelEditor/helpers.html#helpers.keyboard_shortcuts_definition.SHORTCUT_LABELS">SHORTCUT_LABELS (in module helpers.keyboard_shortcuts_definition)</a>
 </li>
       <li><a href="aut/ModelEditor/helpers.html#helpers.autocomplete_helper.AutocompleteHelper.show_autocompletion">show_autocompletion() (helpers.autocomplete_helper.AutocompleteHelper method)</a>
 </li>
@@ -1186,7 +1167,7 @@
 </li>
       <li><a href="aut/ModelEditor/meconfig.html#meconfig.meconfig.MEConfig.sync_analysis_for_curr_file">sync_analysis_for_curr_file() (meconfig.meconfig.MEConfig class method)</a>
 </li>
-      <li><a href="aut/ModelEditor/helpers.html#helpers.keyboard_shortcuts.SYSTEM_SHORTCUTS">SYSTEM_SHORTCUTS (in module helpers.keyboard_shortcuts)</a>
+      <li><a href="aut/ModelEditor/helpers.html#helpers.keyboard_shortcuts_definition.SYSTEM_SHORTCUTS">SYSTEM_SHORTCUTS (in module helpers.keyboard_shortcuts_definition)</a>
 </li>
   </ul></td>
 </tr></table>
